test/passing/format_invalid_files_with_locations.ml
let x = 1 + ((* asd *);;





let x =    "\064"
let x =    "@"

(** parse [ docstring *)
let x = 0
