test/failing/format_invalid_files_with_locations.ml
let x = 1 +;;





let x =    "\064"
let x =    "@"

(** parse [ docstring *)
let x = 0
